apps/base/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app.kubernetes.io/name: website
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: website
